# Gomoku

./: CMakeLists.txt  README.md
include/: Button.h  Rendering.h  chessBoard.h  function.h  game.h  main.h
raylib/include/: raylib.h
src/: Button.c  Rendering.c  chessBoard.c  function.c  game.c  main.c
